--- a/src/components/LatestPosts.astro
+++ b/src/components/LatestPosts.astro
@@ -8,14 +8,16 @@ interface Props {
 }
 
 const { posts } = Astro.props;
+console.log("posts", posts);
+console.log("posts.length", posts.length)
+//<div class="flex flex-col pb-4 md:grid grid-cols-*">
 ---
 
 <Section>
 	<div class="flex justify-between pb-4">
-		<p class="text-xl font-bold">Latest Posts</p>
-		<a href="/posts" class="underline hover:text-orange-600">all posts →</a>
+		<p class="text-xl font-bold">Oppgaver</p>
 	</div>
-	<div class="flex flex-col pb-4 md:flex-row">
+	<div class="grid grid-cols-1 pb-4 md:grid-cols-3">
 		{
 			posts.map((post: any) => (
 				<div class="mb-4 basis-1 last:mr-0 md:mr-4 md:basis-1/3">
