--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ const site = Astro.site;
 
 <Section>
 	<br />
-	<p class="pb-2 pt-6 text-4xl font-bold">Velkommen til web-workshop! 🚀</p>
+	<p class="pb-2 pt-6 text-4xl font-bold">Velkommen til web på 1-2-3! 🚀</p>
 	<div class="text-sm">
 		<p class="py-2">
 			Dette er en workshop for å lære å komme i gang med å lage nettsider med <span
