--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,9 +17,12 @@ const site = Astro.site;
 		<p class="py-2"> I denne workshopen skal vi lære hvordan nettsider er bygget opp, hvordan man legge til tekst og
 			elementer med <span class="front-black text-orange-600">HTML</span>, hvordan man kan gi form og farge med <span class="front-black text-orange-600">CSS</span>, og hvordan man kan gi nettsiden oppførsel med
 			<span class="front-black text-orange-600">JavaScript</span>.</p>
-		<p class="py-2">Klikk på <span class="front-black text-orange-600">Introduksjon</span> under for å komme i gang. </p>
+		<p class="py-2">
+		Ei nettside er alt frå It’s learning der du sjekker lekser, til om du opnar TikTok i nettlesaren eller handlar ei ny t-skjorte i nettbutikken til HM.
+		</p>
 
 		<p class="py-2"> Dersom du kan mye fra før, står du fritt til å hoppe over oppgaver til du finner noe som er passe utfordrende. Utforsk gjerne litt på egenhånd eller spør oss om altenative oppgaver. </p>
+		<p class="py-2">Klikk på <span class="front-black text-orange-600">Introduksjon & oppsett</span> under for å komme i gang. </p>
 
 	</div>
 </Section>
