--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -19,8 +19,8 @@ img.rounded {
   border-radius: 50%;
 }
 
-img.grayscale {
-  filter: grayscale(100%);
+img.filter {
+filter: grayscale(100%);
 }
 
 img.updown {
