chore: improve readability

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,9 @@ const site = Astro.site;
 			elementer med <span class="front-black text-orange-600">HTML</span>, hvordan man kan gi form og farge med <span class="front-black text-orange-600">CSS</span>, og hvordan man kan gi nettsiden oppførsel med
 			<span class="front-black text-orange-600">JavaScript</span>.</p>
 		<p class="py-2">
-		Ei nettside er alt frå It’s learning der du sjekker lekser, til om du opnar TikTok i nettlesaren eller handlar ei ny t-skjorte i nettbutikken til HM.
+		Ei nettside er alt frå <span class="front-black text-orange-600">It’s learning</span> der du sjekker lekser,
+		til om du opnar <span class="front-black text-orange-600">TikTok</span> i nettlesaren
+		eller handlar ei ny t-skjorte i nettbutikken til <span class="front-black text-orange-600">HM</span>.
 		</p>
 
 		<p class="py-2"> Dersom du kan mye fra før, står du fritt til å hoppe over oppgaver til du finner noe som er passe utfordrende. Utforsk gjerne litt på egenhånd eller spør oss om altenative oppgaver. </p>
