fix links for realz this time

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import Section from './Section.astro';
 <Section>
 	<div class="flex justify-between">
 		<div class="text-3xl font-bold">
-			<a href="/"
+			<a href="/TENK-tech-camp-web-intro"
 				> <span class="pr-2 text-2xl text-gray-500">{'<'}</span>TENK<span
 					class="text-orange-600">x</span
 				>knowit<span class="pl-2 text-2xl text-gray-500">{'/>'}</span></a
